K8S/Services/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: wimp.local
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: wimpserver-clusterip-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: wimpserver-clusterip-service
                port:
                  number: 80
          - path: /intel
            pathType: Prefix
            backend:
              service:
                name: wimpserver-clusterip-service
                port:
                  number: 80
          - path: /picture
            pathType: Prefix
            backend:
              service:
                name: wimpserver-clusterip-service
                port:
                  number: 80
          - path: /universe
            pathType: Prefix
            backend:
              service:
                name: wimpserver-clusterip-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wimpfe-clusterip-service
                port:
                  number: 80
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: wimpfe-clusterip-service
                port:
                  number: 80
